snapshot-tests/tests/snapshots/parser__bad_floats__trailing_exp3.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float: exponent requires at least one digit at `a`
  ┌─ trailing_exp3:1:5
  │
1 │ a = 0.0E
  │     ^ invalid float: exponent requires at least one digit
